# portfolio

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
.github/workflows/: deploy.yml
assets/: f.txt  fermo.txt  main.css  s.txt  scotty-fermo.txt  scotty.txt  sf.txt
context/: content_evaluation.md  overview.md  plan.md  presentation.md  progress.md  zwipe_components_request.md
context/projects/: capture.md  halo_action_importer.md  halo_custom_field_builder.md  marvin.md  nighthawk.md  upsee.md  zwipe.md
context/rules/: commit_guidelines.md
src/: data.rs  main.rs  theme.rs  theme_store.rs
src/components/: code_block.rs  footer.rs  gallery.rs  linked_text.rs  mod.rs  navbar.rs  page_meta.rs  project_card.rs  theme_switcher.rs
src/pages/: contribute.rs  detail.rs  home.rs  mod.rs  project_detail.rs  side_quest_detail.rs  side_quests.rs
