[package]
name = "portfolio"
version = "0.1.0"
authors = ["Scotty Fermo <scottyfermo@hotmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
gloo-timers = { version = "0.4", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
