[package]
name = "portfolio"
version = "0.1.0"
authors = ["Scotty Fermo <scottyfermo@hotmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
gloo-timers = { version = "0.4", features = ["futures"] }
# Shared UI with zwipe.net (themes, ThemePicker, PageMeta, NavBar shell).
# Cargo.lock pins the exact commit; `cargo update -p zwipe-components` pulls
# the latest deliberately.
zwipe-components = { git = "https://github.com/scadoshi/zwipe" }
# getrandom 0.4+ requires the explicit wasm_js feature on
# wasm32-unknown-unknown (pulled transitively via zwipe-core's uuid v4);
# same fix as zite's.
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

# localStorage theme persistence (client only).
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"
